src/objects/Commission_Criterion__c.object
<CustomObject>
    <fields>
        <fullName>Close_Date_On_or_After__c</fullName>
        <label>Close Date On or After</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date_On_or_Before__c</fullName>
        <label>Close Date On or Before</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Criterion_for_Payment__c</fullName>
        <inlineHelpText>If Opportunity Owner is selected, the rep will be paid on his/her deals.
If an Owner Team is selected, the rep will be paid on deals closed by that team.</inlineHelpText>
        <label>Criterion for Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opp Owner (incl. Splits)</fullName>
                </value>
                <value>
                    <fullName>Aussie Posse</fullName>
                </value>
                <value>
                    <fullName>Bangers n Cash</fullName>
                </value>
                <value>
                    <fullName>Beast Coast</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
                <value>
                    <fullName>Candy Time</fullName>
                </value>
                <value>
                    <fullName>Central Corporate</fullName>
                </value>
                <value>
                    <fullName>Closers Club</fullName>
                </value>
                <value>
                    <fullName>East Corporate</fullName>
                </value>
                <value>
                    <fullName>Ganas iOS</fullName>
                </value>
                <value>
                    <fullName>EMEA Enterprise</fullName>
                </value>
                <value>
                    <fullName>EMEA Inbound</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>E-Unit</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Global Accounts International</fullName>
                </value>
                <value>
                    <fullName>Global Accounts US</fullName>
                </value>
                <value>
                    <fullName>Intimidators</fullName>
                </value>
                <value>
                    <fullName>Mount Crushmore</fullName>
                </value>
                <value>
                    <fullName>Pipeline Pitbulls</fullName>
                </value>
                <value>
                    <fullName>SEC</fullName>
                </value>
                <value>
                    <fullName>The Green Flash</fullName>
                </value>
                <value>
                    <fullName>The Green Monsters</fullName>
                </value>
                <value>
                    <fullName>The Kitchen</fullName>
                </value>
                <value>
                    <fullName>The Ringers</fullName>
                </value>
                <value>
                    <fullName>The Wild West</fullName>
                </value>
                <value>
                    <fullName>Virtual Empire</fullName>
                </value>
                <value>
                    <fullName>VManifest Destiny</fullName>
                </value>
                <value>
                    <fullName>West Corporate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <formula>Sales_Comp_Plan__r.Rep__r.Full_Name__c</formula>
        <label>Rep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Comp_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Comp Plan</label>
        <referenceTo>Commission_Plan__c</referenceTo>
        <relationshipLabel>Commission Criteria</relationshipLabel>
        <relationshipName>Commission_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Commission Criterion</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Commission Criterion Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>